Data ultima modificação

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,6 @@
 
 <br>Nome: {{ file?.name }}
 <br>UltimaModificação: {{ file?.lastModified }}
+<br>Data UltimaModificação: {{ file?.lastModifiedDate }}
 <br>Tamanho: {{ file?.size }}
 <br>Tipo: {{ file?.type }}
